--- a/css/animation.css
+++ b/css/animation.css
@@ -11,9 +11,12 @@
 img{
    transform: translateX(-50px);
    transform: translateX(50px);
-}
-@keyframes example {
-  
+
+   .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 /*
 To change this license header, choose License Headers in Project Properties.
