--- a/css/animation.css
+++ b/css/animation.css
@@ -8,15 +8,15 @@
   animation-duration: 4s;
   animation-delay: 2s;
 }
-img{
-   transform: translateX(-50px);
-   transform: translateX(50px);
-
-   .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.circle{
+    width: 100px;
+    padding: 50px 0;
+    background:pink;
+    cursor: pointer;
+}  
+.circle:hover{
+    background:salmon;
+    transform: rotate(360deg);
 }
 /*
 To change this license header, choose License Headers in Project Properties.
