--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ body {
   animation-duration: 4s;
   animation-delay: 2s;
 }
+@keyframes example:hover {
+  from {background-color: red;}
+  to {background-color: yellow;}
+}
 
 
 /* 
