--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,7 @@ body {
   animation-duration: 4s;
   animation-delay: 2s;
 }
-@keyframes example:hover {
-  from {background-color: red;}
-  to {background-color: yellow;}
-}
+.myDiv:hover{color:yellow}
 
 
 /* 
