--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,9 @@ body {
   .navbar-nav  li a:hover {
     color: #1abc9c !important;
   }
-  .circle{
-    width: 100px;
-    padding: 50px 0;
-    background:pink;
-    cursor: pointer;
-}  
-.circle:hover{
-    background:salmon;
-    transform: rotate(360deg);
-}        
+        
 .myDiv {
+  margin:auto;
   width: 100px;
   height: 100px;
   background-color: red;
