--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ body {
 .myDiv:hover{
     background-color:#1abc9c
 }
+#grad1 {
+  height: 200px;
+  background-color: #2f2f2f; 
+  background-image: linear-gradient(#2f2f2f, #1abc9c);
+}
 
 
 /* 
