--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,13 @@ body {
     background-color:#1abc9c
 }
 #grad1 {
-  height: 200px;
+  height: 150px;
   background-color: #2f2f2f; 
   background-image: linear-gradient(#2f2f2f, #1abc9c);
+}
+a {
+  text-decoration: none;
+  color: #555555;
 }
 
 
