--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,14 @@ body {
   background-color: #2f2f2f; 
   background-image: linear-gradient(#2f2f2f, #1abc9c);
 }
-
+.sticky{
+    position: fixed;
+    top: 0;
+    with: 100%;
+}
+.sticky + .content{
+    padding-top: 60px;
+}
 
 
 /* 
