--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
 .sticky{
     position: fixed;
     top: 0;
-    with: 100%;
+    width: 100%;
 }
 .sticky + .content{
     padding-top: 100px;
