--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,14 @@ body {
   .navbar-nav  li a:hover {
     color: #1abc9c !important;
   }
+  .sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  .sticky + .content{
+    padding-top: 0px;
+  }
         
 .myDiv {
   margin:auto;
@@ -61,14 +69,19 @@ body {
   background-color: #2f2f2f; 
   background-image: linear-gradient(#2f2f2f, #1abc9c);
 }
-.sticky{
-    position: fixed;
-    top: 0;
-    width: 100%;
+.poga {
+  background-color: #e7e7e7; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
-.sticky + .content{
-    padding-top: 0px;
-}
+
 
 
 /* 
