--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ body {
   background-color: #2f2f2f; 
   background-image: linear-gradient(#2f2f2f, #1abc9c);
 }
-.poga {
-  background-color: #e7e7e7; /* Green */
+.button {
+  background-color: #2f2f2f; /* Black Gray */
   border: none;
   color: white;
   padding: 15px 15px;
