--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   background-image: linear-gradient(#2f2f2f, #1abc9c);
 }
 .button {
-  background-color: #2f2f2f; /* Black Gray */
+   /* Black Gray */
   border: none;
   color: white;
   padding: 15px 15px;
@@ -81,11 +81,7 @@ body {
   margin: 4px 2px;
   cursor: pointer;
 }
-#fname label{
-    display: block;
-    text-align: center;
-    line-height: 150%;
-}
+
 
 
 
