--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
 .background-image{
   display: inline-block;
   vertical-align: top;
-  padding: 100px 100px;
+  padding: 10px;
   width:100%
 }
 
