--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ body {
   border: none;
   color: white;
   padding: 50px 50px;
+  height: 100px;
+  width: 100px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -85,7 +87,8 @@ body {
   display: inline-block;
   vertical-align: top;
   padding: 10px;
-  width : 10%;
+  height: 100px;
+  width: 100px;
 }
 
 
