--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@ body {
 }
 .button {
    /* Black Gray */
+  display: inline-block;
+  vertical-align: top;
   border: none;
   color: white;
   padding: 50px 50px;
@@ -78,9 +80,7 @@ body {
   width: 150px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
 }
 .background-image{
