--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
+  margin: 2px 2px;
   cursor: pointer;
 }
 .background-image{
@@ -89,6 +90,8 @@ body {
   padding: 50px 50px;
   height: 150px;
   width: 150px;
+  margin: 2px 2px;
+  cursor: pointer;
 }
 
 
