--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ body {
   display: inline-block;
   vertical-align: top;
   padding: 50px 50px;
+  height:100%; 
   height: 150px;
   width: 150px;
   margin: 2px 2px;
