--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
   padding: 50px 50px;
   height:100%; 
   height: 1000px;
-  width: : 1000px;
+  width: 1000px;
   margin: 2px 2px;
   cursor: pointer;
 }
