--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,12 @@ body {
   background-image: linear-gradient(#2f2f2f, #1abc9c);
 }
 .button {
-   /* Black Gray */
+  background-color: #2f2f2f;/* Black Gray */
   display: inline-block;
   vertical-align: top;
   border: none;
   color: white;
-  padding: 50px 50px;
+  padding: 10px 10px;
   height: 150px;
   width: 150px;
   text-align: center;
